@@ -1,3 +1,9 @@
+2013-10-10  Sergio Martin <sergio.martin@artica.es>
+
+	* include/functions_agents.php: Change the way of 
+	calculate next contact in main agent view to real
+	next contact using only agent interval.
+
 2013-10-10 Miguel de Dios <miguel.dedios@artica.es>
 	
 	* include/functions_tags.php,
